<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_house" />
        <item
            android:id="@+id/nav_service"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_service" />
        <item
            android:id="@+id/nav_room_service"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="Dịch vụ phòng" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_utility" />
        <item
            android:id="@+id/nav_contract"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_contract" />
        <item
            android:id="@+id/nav_tenant"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_tenant" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_finance" />
        <item
            android:id="@+id/nav_report"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/title_message" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_stats" />
        <item
            android:id="@+id/nav_issue"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="Quản lý sự cố" />
        <item
            android:id="@+id/nav_asset"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_asset" />
        <item
            android:id="@+id/nav_permission"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="Đăng xuất" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

</menu>
