<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_invoice"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_invoice" />

    <item
        android:id="@+id/navigation_tenant"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_tenant" />
        
    <item
        android:id="@+id/navigation_message"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_issue"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_issue" />

</menu>
